--- a/css/style.css
+++ b/css/style.css
@@ -23,7 +23,7 @@
 .dark-mode .colorlib-nav-toggle i::before,
 .dark-mode .colorlib-nav-toggle i::after{
 	background-color: white;
-} */
+} 
 
 /* =======================================================
 *
